WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
99610
Fullscreen movie controls behave incorrectly when clicked (and dragged)
https://bugs.webkit.org/show_bug.cgi?id=99610
Summary
Fullscreen movie controls behave incorrectly when clicked (and dragged)
Jer Noble
Reported
2012-10-17 10:31:30 PDT
Fullscreen movie controls behave incorrectly when clicked (and dragged)
Attachments
Patch
(6.04 KB, patch)
2012-10-17 10:39 PDT
,
Jer Noble
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jer Noble
Comment 1
2012-10-17 10:31:49 PDT
<
rdar://problem/12227028
>
Jer Noble
Comment 2
2012-10-17 10:39:04 PDT
Created
attachment 169211
[details]
Patch
WebKit Review Bot
Comment 3
2012-10-18 11:20:33 PDT
Comment on
attachment 169211
[details]
Patch Clearing flags on attachment: 169211 Committed
r131781
: <
http://trac.webkit.org/changeset/131781
>
WebKit Review Bot
Comment 4
2012-10-18 11:20:36 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug