Fullscreen movie controls behave incorrectly when clicked (and dragged) https://bugs.webkit.org/show_bug.cgi?id=99610

Reviewed by Eric Carlson.

Source/WebCore:

Do not reset the relative drag position to 0,0 at the beginning of every drag.  Instead,
store the cumulative drag offset and accumulate during each additional drag.

No new tests; modified the fullscreen/video-controls-drag.html test.

* html/shadow/MediaControlElements.cpp:
(WebCore::MediaControlPanelElement::startDrag): Reset m_lastDragEventLocation.
(WebCore::MediaControlPanelElement::continueDrag): Accumulate drag distance in m_cumulativeDragOffset.
(WebCore::MediaControlPanelElement::resetPosition): Reset m_cumulativeDragOffset.
* html/shadow/MediaControlElements.h:

LayoutTests:

Add a second drag operation, testing that the location does not reset at the beginning of
each additional drag.

* fullscreen/video-controls-drag-expected.txt:
* fullscreen/video-controls-drag.html:


Canonical link: https://commits.webkit.org/117725@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@131781 268f45cc-cd09-0410-ab3c-d52691b4dbfc